# stock_control

./: README.md  pyproject.toml
instance/: database.db
stock_control/: main.py
stock_control/static/css/: login.css  register.css  style.css
stock_control/templates/: index.html  login.html  register.html
