[tool.poetry]
name = "stock-control"
version = "0.1.0"
description = ""
authors = ["Alexander Ueno <alexander.ueno@edu.unifil.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-login = "^0.6.3"
flask-wtf = "^1.2.2"
werkzeug = "^3.1.3"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
